k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sw-mlops-be
  namespace: shopping
spec:
  selector:
    app: sw-mlops-be
  ports:
    - port: 8080
      targetPort: 8080
